# wasmbuild

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  cache.ts  contributing.md  deno.json  deno.jsonc  deps.ts  loader.ts  main.ts  manifest.ts  rust-toolchain.toml  wasmopt.ts
.github/: contributing.md
.github/workflows/: ci.yml  publish.yml
lib/: args.test.ts  args.ts  bindgen.ts  deps.ts  helpers.ts  loader.js  loader.ts  loader_text.generated.ts  manifest.ts  new_command.ts  pre_build.ts  versions.test.ts  versions.ts  wasmbuild.d.ts  wasmbuild.generated.d.ts  wasmbuild.generated.js  wasmbuild.internal.js  wasmbuild.js  wasmbuild.wasm  wasmbuild_bg.generated.js  wasmbuild_bg.js  wasmbuild_bg.wasm  wasmopt.ts
lib/commands/: build_command.ts  check_command.ts  new_command.ts
lib/utils/: sha1.ts
loader/: cache.ts  fetch.js  fetch.ts  loader.js  mod.js
rs-lib/: Cargo.toml  deno_test.wasm
rs-lib/src/: lib.rs
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
scaffold/: wasm_cache.ts
scripts/: build.ts  build_loader_text.ts  update_deno_json_version.ts
test/: Cargo.toml  lib.rs
tests/: .gitignore  .rustfmt.toml  Cargo.toml  add.js  browser.html  browser_test.ts  cli_test.ts  lib.rs  test.deps.ts  test.ts
tests/lib/: deno_test.generated.js
tests/lib_sync/: deno_test.generated.js
