[package]
name = "wasmbuild"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
anyhow = "1.0.57"
js-sys = { version = "0.3.55" }
serde = { version = "1.0.130", features = ["derive", "rc"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-cli-support = "0.2.80"
walrus = "0.19.0"
