[package]
name = "wasmbuild"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
anyhow = "1.0.57"
js-sys = "0.3.58"
serde = { version = "1.0.130", features = ["derive", "rc"] }
# make sure to update the version in main.ts to match this version
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-cli-support = { version = "0.2.81" }
