[package]
name = "wasmbuild"
version = "0.1.1"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = "=1.0.79"
js-sys = "=0.3.69"
serde = { version = "1.0.196", features = ["derive", "rc"] }
# make sure to update the version in lib/versions.ts to match this version
wasm-bindgen = "=0.2.92"
wasm-bindgen-cli-support = "=0.2.92"
serde-wasm-bindgen = "=0.6.3"