[package]
name = "wasmbuild"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.93"
js-sys = "=0.3.72"
serde = { version = "1.0.215", features = ["derive", "rc"] }
# make sure to update the version in lib/versions.ts to match this version
wasm-bindgen = "=0.2.100"
wasm-bindgen-cli-support = "=0.2.100"
serde-wasm-bindgen = "=0.6.5"
