[package]
name = "deno_test"
version = "0.1.0"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"

[dependencies]
wasm-bindgen = { git = "https://github.com/dsherret/wasm-bindgen", branch = "add_back_types_getters_setters" }

[lib]
name = "deno_test"
crate_type = ["cdylib"]
path = "lib.rs"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
